# bseMsg

./: CMakeLists.txt  README.md  bseMsg.vcxproj
include/bse/msg/: BJSBSDBFMsg.h  BJSBSDBFMsgFile.h  BJSBSDBFMsgFormatter.h  BJSBSDBFMsgJsonSerializer.hpp  BJSQRDBFMsg.h  BJSQRDBFMsgFile.h  BJSQRDBFMsgFormatter.h  BJSQRDBFMsgJsonSerializer.hpp  NQFGKCJXXDBFMsg.h  NQFGKCJXXDBFMsgFile.h  NQFGKCJXXDBFMsgFormatter.h  NQFGKCJXXDBFMsgJsonSerializer.hpp  NQFGKSBXXDBFMsg.h  NQFGKSBXXDBFMsgFile.h  NQFGKSBXXDBFMsgFormatter.h  NQFGKSBXXDBFMsgJsonSerializer.hpp  NQHBDBFMsg.h  NQHBDBFMsgFile.h  NQHBDBFMsgFormatter.h  NQHBDBFMsgJsonSerializer.hpp  NQHQDBFMsg.h  NQHQDBFMsgFile.h  NQHQDBFMsgFormatter.h  NQHQDBFMsgJsonSerializer.hpp  NQWTDBFMsg.h  NQWTDBFMsgFile.h  NQWTDBFMsgFormatter.h  NQWTDBFMsgJsonSerializer.hpp  NQXXDBFMsg.h  NQXXDBFMsgFile.h  NQXXDBFMsgFormatter.h  NQXXDBFMsgJsonSerializer.hpp  NQXYXXDBFMsg.h  NQXYXXDBFMsgFile.h  NQXYXXDBFMsgFormatter.h  NQXYXXDBFMsgJsonSerializer.hpp  NQZSXXDBFMsg.h  NQZSXXDBFMsgFile.h  NQZSXXDBFMsgFormatter.h  NQZSXXDBFMsgJsonSerializer.hpp
src/: main.cpp
src/bse/msg/: BJSBSDBFMsg.cpp  BJSBSDBFMsgFile.cpp  BJSQRDBFMsg.cpp  BJSQRDBFMsgFile.cpp  NQFGKCJXXDBFMsg.cpp  NQFGKCJXXDBFMsgFile.cpp  NQFGKSBXXDBFMsg.cpp  NQFGKSBXXDBFMsgFile.cpp  NQHBDBFMsg.cpp  NQHBDBFMsgFile.cpp  NQHQDBFMsg.cpp  NQHQDBFMsgFile.cpp  NQWTDBFMsg.cpp  NQWTDBFMsgFile.cpp  NQXXDBFMsg.cpp  NQXXDBFMsgFile.cpp  NQXYXXDBFMsg.cpp  NQXYXXDBFMsgFile.cpp  NQZSXXDBFMsg.cpp  NQZSXXDBFMsgFile.cpp
